# learning-content-specifier

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SUPPORT.md  pyproject.toml  release_notes.md  spec-driven.md
.devcontainer/: devcontainer.json
contracts/: README.md  index.json
docs/: README.md  docfx.json  follow-up-ux.md  index.md  installation.md  local-development.md  quickstart.md  toc.yml  upgrade.md
extensions/: EXTENSION-API-REFERENCE.md  EXTENSION-DEVELOPMENT-GUIDE.md  EXTENSION-PUBLISHING-GUIDE.md  EXTENSION-USER-GUIDE.md  RFC-EXTENSION-SYSTEM.md  catalog.example.json  catalog.json
scaffolds/lcs-output-consumer/: .gitignore  README.md  pyproject.toml
scaffolds/lcs-output-consumer/contracts/: README.md
scaffolds/lcs-output-consumer/docs/contract/: README.md
scaffolds/lcs-output-consumer/lcs_output_consumer/: __init__.py  api_models.py  contract_sync.py  main.py  store.py  validator.py
scaffolds/lcs-output-consumer/tests/: test_smoke.py
schemas/: brief.schema.json  design.schema.json  manifest.schema.json  sequence.schema.json
scripts/: build_contract_package.py  scaffold_output_consumer.py  validate_artifact_contracts.py  validate_rubric_gates.py
templates/: brief-template.md  design-template.md  plan-template.md  rubric-template.md  sequence-template.md  tasks-template.md  vscode-settings.json
tests/: __init__.py  test_artifact_contracts.py  test_command_template_contracts.py  test_consumer_contract_compat.py  test_contract_package.py  test_e2e_golden_path.py  test_extensions.py  test_gate_determinism.py  (+11 more)
(+175 files in other folders)
