[project]
name = "lcs-output-consumer"
version = "0.1.0"
description = "Standalone consumer backbone for LCS output artifacts"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jsonschema>=4.23.0",
  "pydantic>=2.8.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[project.scripts]
lcs-output-consumer = "lcs_output_consumer.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lcs_output_consumer"]
